fix page gap

--- a/src/pages/Clinic/Clinic.module.scss
+++ b/src/pages/Clinic/Clinic.module.scss
@@ -2,6 +2,8 @@
   padding: 12px 24px 61px 24px;
   background-color: white;
   flex: 1;
+  display: grid;
+  grid-gap: 12px;
 
   .header {
     display: flex;
@@ -16,7 +18,7 @@
   }
   .banner {
     display: flex;
-    margin: 15px 0 20px;
+    margin: 3px 0 8px;
     overflow: scroll;
 
     &::-webkit-scrollbar {
@@ -58,7 +60,6 @@
     border: 1px solid rgba(170, 176, 178, 0.2);
     border-radius: 15px;
     font-weight: bold;
-    margin-bottom: 12px;
 
     .title {
       color: #2B3A4B;
