--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,7 +1,9 @@
 .wrapper {
   flex: 1;
-  padding: 12px 24px 12px 24px;
+  padding: 12px 24px 49px 24px;
   background-color: white;
+  display: grid;
+  grid-gap: 12px;
 
   .header {
     display: flex;
@@ -17,7 +19,7 @@
 
   .banner {
     display: flex;
-    margin: 15px 0 20px;
+    margin: 3px 0 8px;
     overflow: scroll;
 
     &::-webkit-scrollbar {
@@ -57,7 +59,6 @@
    border: 1px solid rgba(170, 176, 178, 0.2);
    border-radius: 15px;
    padding: 24px;
-   margin-bottom: 12px;
 
    .title {
      font-weight: bold;
